# ant30operation

./: .gitignore  Incguard.sh  svn-commit.2.tmp  svn-commit.tmp
ant30/: Makefile  Makefile.30cm  acu.cpp  acu.h  be.cpp  calcBoth.cpp  calcBoth.h  celestialObject.cpp  chop.cpp  compileDate.h  configuration.h  controlBoard.cpp  controlBoard.h  fe.cpp  hoge.txt  if.cpp  ifCalcBoth.h  instrument.cpp  instrument.cpp_20121020  instrument.h  instrumentTest.cpp  instrument_2009.cpp  instrument_20101008.cpp  instrument_nagai.cpp  makeSch.cpp  makeSch.ti  makeSch_20121020.cpp  scanTable.cpp  scanTable.h  testAcu.cpp  tkb32.20110126  tkb32.cpp  tkb32Func.cpp  tkb32Parser.cpp  tkb32ParserTkb32Func.h  tkb32Test.cpp  trk.cpp  trkCalc.h  weath.cpp  weath_old.cpp  (+2 more)
attenuator/: Makefile  glacier_att.c  glacier_att.h  test.c  usb220_gpib.h
ccdr/: Makefile  a.out  anime.cc  diamond.cc  graph.cc  graphic3.cc  graphics2.cc  gratest.cc  mtest.cc  ptest.cc  showtime.cc  tree.cc
cdr/: Makefile  a.out  char.c  color.c  fsca.c  map.c  maze.c  mushi.c  search.c  sequence.c  yesno.c
chopper/: Makefile  penguin_chopper.cpp  penguin_chopper.h  srvChopper.cpp  test.c
chopper.old/: autoChopper.cpp  chopper.cpp  chopperTest.cpp  penguin_chopper.cpp
curses/: Makefile  demo1.c  demo2.c  demo3.c  demo4.c  demo5.c
debug/: Makefile  glacier_debug.c  glacier_debug.h
dio/: Makefile  dio.c
dlp-temp-g/: Makefile  test.c
etc/: penguin_tracking.conf  tkb32cl.conf  (+1 more)
tkb32clGUI_old/src/: Makefile  Makefile.am  callbacksSub.c  callbacksSub.h  interface.c
tkb32clGUI_old/src/import/: tkb32clPort.cpp
(+871 files in other folders)
